--- a/maca-electron/index.html
+++ b/maca-electron/index.html
@@ -11,5 +11,8 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+
+    <span id="valor"></span>
+    <script type="module" src="./maca.js"></script>
   </body>
 </html>
