--- a/maca-electron/index.html
+++ b/maca-electron/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <link rel="stylesheet" href="./src/library/bootstrap.min.css"
+
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <span id="valor"></span>
-    <script type="module" src="./maca.js"></script>
+    
+    <button id="zerar">Zerar</button>
+    <span id="valor">Carregando...</span>
+    
   </body>
+  <script  src="./src/script/maca.js"></script>
+  <script  src="./src/library/bootstrap.min.js"></script>
 </html>
