--- a/maca-electron/index.html
+++ b/maca-electron/index.html
@@ -8,7 +8,15 @@
 
   </head>
   <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="">
+
+            </div>
+
+        </div>
+
+    </div>
     <button id="zerar">Zerar</button>
     <span id="valor">Carregando...</span>
     
